--- a/app/src/main/res/layout/image_text_answer_layout.xml
+++ b/app/src/main/res/layout/image_text_answer_layout.xml
@@ -3,33 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="126dp"
     android:padding="1dp">
+
     <ImageView
         android:id="@+id/answer_image"
         android:layout_width="0dp"
-        android:layout_height="87dp"
+        android:layout_height="0dp"
         android:layout_gravity="top|center"
         android:scaleType="centerCrop"
         android:src="@drawable/android_pattern"
         app:layout_constraintBottom_toTopOf="@+id/answer_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/answer_text"
         android:layout_width="match_parent"
         android:layout_height="39dp"
         android:layout_gravity="bottom|center"
-        android:paddingTop="9dp"
-        android:paddingBottom="9dp"
-        android:paddingStart="8dp"
-        android:paddingEnd="6dp"
         android:gravity="center"
+        android:paddingBottom="9dp"
+        android:paddingEnd="6dp"
+        android:paddingStart="8dp"
+        android:paddingTop="9dp"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="parent"
-        tools:text="Very Very Long Demo Text"/>
+        tools:text="Very Very Long Demo Text"
+        tools:visibility="gone"/>
 </android.support.constraint.ConstraintLayout>
