--- a/app/src/main/res/layout/image_text_answer_layout.xml
+++ b/app/src/main/res/layout/image_text_answer_layout.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_gravity="top|center"
-        android:scaleType="centerCrop"
+        android:scaleType="fitCenter"
         android:src="@drawable/android_pattern"
         app:layout_constraintBottom_toTopOf="@+id/answer_text"
         app:layout_constraintEnd_toEndOf="parent"
