--- a/app/src/main/res/layout/phone_veriy_activity.xml
+++ b/app/src/main/res/layout/phone_veriy_activity.xml
@@ -1,27 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/cardview_dark_background"
     >
+    <data xmlns:android="http://schemas.android.com/apk/res/android">
+        <variable
+            name="model"
+            type="org.kinecosystem.kinit.viewmodel.PhoneVerificationViewModel"/>
+    </data>
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:text="phone verify"
-        tools:layout_editor_absoluteX="9dp"
-        tools:layout_editor_absoluteY="439dp"/>
-    <TextView
-        android:id="@+id/tos_text"
-        android:layout_width="wrap_content"
-        android:layout_height="16dp"
-        android:text="phoine verify t"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="519dp"/>
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        >
+
+        <FrameLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+        </FrameLayout>
 
 
-</android.support.constraint.ConstraintLayout>
+    </android.support.constraint.ConstraintLayout>
+</layout>
