--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -80,4 +80,8 @@
         <item name="colorAccent">@color/status_bar_color</item>
     </style>
 
+    <style name="AppTheme.DarkAccent">
+        <item name="colorAccent">@color/grey</item>
+    </style>
+
 </resources>
