--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,9 @@
     <dimen name="tab_text_size">10sp</dimen>
     <dimen name="button_text_size">16sp</dimen>
     <dimen name="balance_height">56dp</dimen>
-    <dimen name="image_answer_corner">2dp</dimen>
+    <dimen name="image_answer_corner">4dp</dimen>
     <dimen name="emojy_gap">16dp</dimen>
+    <dimen name="question_gray_text_size">14sp</dimen>
+    <dimen name="match_constraint">0dp</dimen>
+    <dimen name="questionnaire_margins">33dp</dimen>
 </resources>
