--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,6 +54,15 @@
         <item name="android:background">@drawable/answer_bg_drawable</item>
     </style>
 
+    <style name="Button.MultipleAnswer">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_marginBottom">1dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:orientation">horizontal</item>
+        <item name="android:background">@drawable/multiple_button_answer_bg_drawable</item>
+    </style>
+
     <style name="Button.ImageAnswer">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">124dp</item>
