--- a/app/src/main/res/layout/tutorial_welcome.xml
+++ b/app/src/main/res/layout/tutorial_welcome.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scaleType="centerInside"
+        android:scaleType="fitXY"
         android:src="@drawable/enter_illustration"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
