--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -24,4 +24,5 @@
     <dimen name="header_img_height">180dp</dimen>
     <dimen name="header_text_bottom_guid">267dp</dimen>
     <dimen name="header_text_bottom_guid_space">28dp</dimen>
+    <dimen name="rounded_rec_small">8dp</dimen>
 </resources>
